# ImageProcessorLibrary

./: CMakeLists.txt  LICENSE  README.md
include/: ImageProcessor.h  Processor.h
src/: Processor.cpp
test/: ImageProcessor.h  Makefile  Test.cpp  Test.h
